--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/2.2635e93d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.8531aee2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.5549988b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.00a64fc5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.881081dc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.70325207.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.f7384350.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.b1bb131c.js">
+		<link href="./_app/immutable/assets/2.0e7b350c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2af42247.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.af5c8e31.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1bbe5d0f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.4286dadf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.09c9623e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.e6ce5c12.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.2893f7ce.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.e59479a4.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <main><div class="amongus svelte-1enqb1g" style="--angle: 123; top: 82%; left: 80%; background-image: url('images/amongus-1.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 46; top: 70%; left: 98%; background-image: url('images/amongus-4.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 124; top: 75%; left: 74%; background-image: url('images/amongus-0.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 243; top: 16%; left: 79%; background-image: url('images/amongus-2.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 26; top: 64%; left: 93%; background-image: url('images/amongus-2.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 240; top: 52%; left: 69%; background-image: url('images/amongus-4.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 277; top: 99%; left: 45%; background-image: url('images/amongus-1.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 210; top: 98%; left: 88%; background-image: url('images/amongus-0.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 145; top: 67%; left: 98%; background-image: url('images/amongus-0.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 157; top: 93%; left: 88%; background-image: url('images/amongus-2.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 212; top: 78%; left: 93%; background-image: url('images/amongus-0.png')"></div> <section class="cards svelte-1img7vo"><div class="card svelte-1whe7ef"><div class="message svelte-1whe7ef">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-1whe7ef">- <i>ඞ</i></div> </div><div class="card svelte-1whe7ef"><div class="message svelte-1whe7ef">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-1whe7ef">- <i>ඞ</i></div> </div><div class="card svelte-1whe7ef"><div class="message svelte-1whe7ef">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-1whe7ef">- <i>ඞ</i></div> </div><div class="card svelte-1whe7ef"><div class="message svelte-1whe7ef">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-1whe7ef">- <i>ඞ</i></div> </div><div class="card svelte-1whe7ef"><div class="message svelte-1whe7ef">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-1whe7ef">- <i>ඞ</i></div> </div></section> <div class="baldursGate svelte-1l679vy" data-svelte-h="svelte-soregh"></div> </main> 
+		<div style="display: contents">  <main><div class="amongus svelte-1enqb1g" style="--angle: 298; top: 97%; left: 6%; background-image: url('images/amongus-2.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 249; top: 4%; left: 18%; background-image: url('images/amongus-4.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 323; top: 3%; left: 62%; background-image: url('images/amongus-1.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 303; top: 69%; left: 0%; background-image: url('images/amongus-2.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 319; top: 99%; left: 22%; background-image: url('images/amongus-4.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 55; top: 17%; left: 88%; background-image: url('images/amongus-0.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 99; top: 66%; left: 62%; background-image: url('images/amongus-4.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 340; top: 56%; left: 77%; background-image: url('images/amongus-0.png')"></div><div class="amongus svelte-1enqb1g" style="--angle: 136; top: 60%; left: 24%; background-image: url('images/amongus-2.png')"></div> <section class="cards svelte-1img7vo"><div class="card svelte-14qumzf"><div class="message svelte-14qumzf">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-14qumzf">- <i>ඞ</i></div> </div><div class="card svelte-14qumzf"><div class="message svelte-14qumzf">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-14qumzf">- <i>ඞ</i></div> </div><div class="card svelte-14qumzf"><div class="message svelte-14qumzf">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-14qumzf">- <i>ඞ</i></div> </div><div class="card svelte-14qumzf"><div class="message svelte-14qumzf">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-14qumzf">- <i>ඞ</i></div> </div><div class="card svelte-14qumzf"><div class="message svelte-14qumzf">ඞ Placeholder card message ඞ</div> <button class="svelte-b5dr6m"><p class=" svelte-b5dr6m">Click me for hidden image!</p> <img class="hidden svelte-b5dr6m" alt="deez nuts" src="images/rickroll.gif"> </button> <div class="author svelte-14qumzf">- <i>ඞ</i></div> </div></section> <div class="baldursGate svelte-1l679vy" data-svelte-h="svelte-soregh"></div> </main> 
 			
 			<script>
 				{
-					__sveltekit_1xkg1yt = {
+					__sveltekit_1nduxjt = {
 						assets: "/among-us-party-website",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -31,8 +32,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.8531aee2.js"),
-						import("./_app/immutable/entry/app.881081dc.js")
+						import("./_app/immutable/entry/start.2af42247.js"),
+						import("./_app/immutable/entry/app.4286dadf.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
